package com.isp.exercise_refactored;

public interface ITimedDoor extends Door {
    void timeOutCallback();
}