package com.isp.exercise_refactored;

public interface ISensingDoor extends Door {
    void proximityCallback();
}